test/rules/single_criterion/pod_privilege_escalation/not_allow_pod_privilege_escalation/config.json
{
  "description": "Test single criteria rule (not allow pod privilege escalation)",
  "runKwctl": true,
  "testWorkspace": "../fixtures/",
  "accept": [
    "deployments/normal.yaml"
  ],
  "reject": [
    "deployments/privileged_escalation.yaml"
  ]
}
